# Rust

./: .env  .gitignore  Cargo.toml  README.md  config.yaml  docker-compose.yml  log4rs_client.yaml  log4rs_server.yaml
Rust-Actix-Diesel/src/: main.rs
Rust-Actix-Diesel/src/handler/: product.rs
Rust-Actix-Diesel/src/model/: product.rs
Rust-Actix-Diesel/src/router/: product.rs
Rust-Candle-LLM/: Cargo.toml
Rust-Hyper-WebTransport/: Cargo.toml  README.md
Rust-Hyper-WebTransport/hyperium/h3/: Cargo.toml
Rust-Hyper-WebTransport/hyperium/h3-webtransport/: Cargo.toml
Rust-Hyper-gateway/src/: config.rs  entity.rs  main.rs  route.rs  throttle.rs
Rust-Meilisearch/: config.toml  init.sql
Rust-Meilisearch/importer/: .env  Cargo.toml  README.md
Rust-Meilisearch/importer/src/: main.rs
Rust-Meilisearch/indexer/: Cargo.toml  README.md
Rust-Meilisearch/indexer/src/: main.rs
Rust-Meilisearch/viewer/: Cargo.toml  index.html
Rust-SOCKS5-proxy/: Cargo.toml  README.md
Rust-Tokio-WebSocket/: Cargo.toml  README.md
hyperium/h3-quinn/: Cargo.toml
migrations/: up.sql
src/: cert.rs  config.rs  connection.rs  constant.rs  db_connection.rs  entity.rs  lib.rs  log.rs  logger.rs  main.rs  route.rs  schema.rs  throttle.rs  trace.rs
viewer/: README.md
viewer/src/: main.rs
