[package]
name = "hyper-gateway"
version = "0.1.0"
authors = ["my <sosnsg@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.28.1", features = ["net", "rt", "time", "full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }

rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"

log = "0.4.18"
env_logger = "0.10.0"
chrono = "0.4.26"
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_yaml = "0.9.21"
http = "0.2.9"
fastrand = "2.0.0"
