[package]
name = "yobara-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-channel = "0.3.29"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
url = "2.5.0"
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
