[package]
    name    = "rust-socks5-proxy"
    version = "0.1.0"
    edition = "2024"

[dependencies]
    anyhow         = "1.0"
    clap           = {version = "4.5", features = ["derive"]}
    ipnet          = "2.11"
    log            = "0.4"
    log4rs         = "1.3"
    rustls-pemfile = "0.2"
    tokio          = {version = "1.44", features = ["full"]}
    tokio-rustls   = "0.26"
