[package]
    name    = "indexer"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    tokio = {version = "1.0", features = ["full"]}
    sqlx = {version = "0.7", features = [
        "runtime-tokio",
        "postgres",
        "chrono",
        "bigdecimal",
    ]}
    bigdecimal = "0.4"
    serde = {version = "1.0", features = ["derive"]}
    serde_json = "1.0"
    meilisearch-sdk = "0.27.1"
